Fix for 8189123 doesn't include precompiled headers

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • openjdk7u
    • Affects Version/s: openjdk7u
    • Component/s: hotspot
    • None
    • b00
    • master
    • generic
    • windows

      OpenJDK 7 fix for 8189123 fails to build on Windows:

      classLoaderDependencies.cpp
      R:\openjdk\hotspot\src\share\vm\classfile\classLoaderDependencies.cpp(25) : error C2220: warning treated as error - no 'object' file generated
      R:\openjdk\hotspot\src\share\vm\classfile\classLoaderDependencies.cpp(25) : warning C4627: '#include "classfile/classLoaderDependencies.hpp"': skipped when looking for precompiled header use
              Add directive to 'precompiled.hpp' or rebuild precompiled header
      R:\openjdk\hotspot\src\share\vm\classfile\classLoaderDependencies.cpp(131) : fatal error C1010: unexpected end of file while looking for precompiled header. Did you forget to add '#include "precompiled.hpp"' to your source?

            Assignee:
            Martin Balao Alonso
            Reporter:
            Andrew Hughes
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: