8202850: Fix for 8189123 doesn't include precompiled header

Reviewed-by: andrew